--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 rmp-serde = "1.3.0"
 serde = "1.0.219"
+walkdir = "2.5.0"
 
 [profile.custom-opt]
 inherits = "release"
